--- a/.github/workflows/publish-manifest.yaml
+++ b/.github/workflows/publish-manifest.yaml
@@ -36,10 +36,16 @@ jobs:
           mkdir -p deploy
           rm -f deploy/mni-installer.yaml
           
-          # Replace variables in manifests
-          for file in manifests/*.yaml; do
+          manifest_files=(manifests/*.yaml)
+          num_files=${#manifest_files[@]}
+          
+          for ((i=0; i<${num_files}; i++)); do
+            file="${manifest_files[$i]}"
             sed "s|\${REGISTRY}|${REGISTRY}|g; s|\${TAG}|${TAG}|g" "$file" >> deploy/mni-installer.yaml
-            echo "---" >> deploy/mni-installer.yaml
+            # Add separator only if not the last file
+            if [ $((i + 1)) -lt ${num_files} ]; then
+              echo "---" >> deploy/mni-installer.yaml
+            fi
           done
       
       - name: Commit and push changes
